tests/NormalTests/paczka1/fuzzy1/17142492.err
Error in line 8: Gx349d3pacx A373 13,7
Error in line 10: Gx349d3pacx S79 7,8
Error in line 4: CzKuUZCeR S79 74,1
Error in line 18: nR4dd3Sq S79 19,3
Error in line 35: Gx349d3pacx A852 16,7
